// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date input by default renders boolean attributes 1`] = `
<div class="govuk-form-group">
  <div class="govuk-date-input"
       data-attribute
  >
    <div class="govuk-date-input__item">
      <div class="govuk-form-group">
        <label class="govuk-label govuk-date-input__label"
               for="undefined-day"
        >
          Day
        </label>
        <input class="govuk-input govuk-date-input__input govuk-input--width-2"
               id="undefined-day"
               name="day"
               type="number"
               pattern="[0-9]*"
        >
      </div>
    </div>
    <div class="govuk-date-input__item">
      <div class="govuk-form-group">
        <label class="govuk-label govuk-date-input__label"
               for="undefined-month"
        >
          Month
        </label>
        <input class="govuk-input govuk-date-input__input govuk-input--width-2"
               id="undefined-month"
               name="month"
               type="number"
               pattern="[0-9]*"
        >
      </div>
    </div>
    <div class="govuk-date-input__item">
      <div class="govuk-form-group">
        <label class="govuk-label govuk-date-input__label"
               for="undefined-year"
        >
          Year
        </label>
        <input class="govuk-input govuk-date-input__input govuk-input--width-4"
               id="undefined-year"
               name="year"
               type="number"
               pattern="[0-9]*"
        >
      </div>
    </div>
  </div>
</div>
`;

exports[`Date input nested dependant components passes through label params without breaking 1`] = `
<label class="govuk-label govuk-date-input__label"
       for="dob-day"
>
  Day
</label>
<label class="govuk-label govuk-date-input__label"
       for="dob-month"
>
  Month
</label>
<label class="govuk-label govuk-date-input__label"
       for="dob-year"
>
  Year
</label>
`;

exports[`Date input passes through fieldset params without breaking 1`] = `
<fieldset class="govuk-fieldset"
          role="group"
          aria-describedby="dob-hint"
>
  <legend class="govuk-fieldset__legend">
    What is your date of birth?
  </legend>
</fieldset>
`;

exports[`Date input passes through html fieldset params without breaking 1`] = `
<fieldset class="govuk-fieldset"
          role="group"
          aria-describedby="dob-error"
>
  <legend class="govuk-fieldset__legend">
    What is your
    <b>
      date of birth
    </b>
    ?
  </legend>
</fieldset>
`;

exports[`Date input when it includes a hint renders the hint 1`] = `
<span id="dob-errors-hint"
      class="govuk-hint"
>
  For example, 31 3 1980
</span>
`;

exports[`Date input when it includes an error message renders the error message 1`] = `
<span id="dob-errors-error"
      class="govuk-error-message"
>
  Error message goes here
</span>
`;
